# lightning-orderbook

./: .gitignore  CMakeLists.txt  latency_list.csv  latency_results.csv  latency_vector.csv
bash_scripts/: benchmark.sh  run.sh
bench/include/: cycle_clock.hpp  latency_stats.hpp  replay_harness.hpp
bench/src/: cycle_clock.cpp  latency_stats.cpp  main_bench.cpp  replay_harness.cpp
docs/: working.md
f_vector_impl/include/: matching_engine.hpp  order.hpp  order_book.hpp  price_level.hpp
f_vector_impl/include/utils/: order_pool.hpp  ring_buffer.hpp
f_vector_impl/src/: matching_engine.cpp  order_book.cpp  price_level.cpp
f_vector_impl/src/utils/: logger.cpp  ring_buffer.cpp
include/: types.hpp
include/utils/: logger.hpp
itch/include/: itch_parser.hpp
itch/src/: itch_parser.cpp
list_impl/include/: matching_engine.hpp  order.hpp  order_book.hpp  price_level.hpp  types.hpp
list_impl/src/: matching_engine.cpp  order.cpp  order_book.cpp  price_level.cpp
list_impl/src/utils/: logger.cpp
scripts/: compare_impls.py  generate_itch.py  plot_latency.py  run_comparison.sh
tests/: test_itch_parser.cpp  test_latency_stats.cpp  test_matching_engine.cpp  test_order.cpp  test_order_book.cpp  test_price_level.cpp
vector_impl/include/: order.hpp  price_level.hpp  types.hpp
vector_impl/include/utils/: logger.hpp  ring_buffer.hpp
vector_impl/src/: matching_engine.cpp  order_book.cpp  price_level.cpp
vector_impl/src/utils/: logger.cpp
